--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
         <div class="desktop">
             <div class="card">
-                <img src="images/image-qr-code.png" alt="QR code">
+                <img src="/image-qr-code.png" alt="QR code">
                 <p class="card-title">
                     Improve your front-end skills by building projects
                 </p>
