--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <title>Frontend Mentor | QR code component</title>
 
         <style>
-    footer { font-size: 11px; text-align: center; }
-    a { color: hsl(228, 45%, 44%); }
-    body {background-color: lightgray; font-size: 15px;}
-    img {max-width: 100%;border-radius: 15px; margin-left: 15px; margin-top: 15px;}
-    .card {max-width: 300px; padding:16px; background-color:white; border-radius: 15px;min-height: 100vh;display: flex;align-items: center;justify-content: center;}
-    .card-title {font-weight: 700; font-family: system-ui, -apple-system, 'Segoe UI','Open Sans', 'Helvetica Neue', sans-serif;text-align: center; padding: 10px;}
-    .card-description {color:grey; font-weight: 400; font-family: system-ui, -apple-system, 'Segoe UI','Open Sans', 'Helvetica Neue', sans-serif;text-align: center; padding: 10px;}
-    </style>
+        footer { font-size: 11px; text-align: center; }
+        a { color: hsl(228, 45%, 44%); }
+        body {background-color: lightgray; font-size: 15px;}
+        img {max-width: 100%;border-radius: 15px; margin-left: 15px; margin-top: 15px;}
+        .card {max-width: 300px; padding:16px; background-color:white; border-radius: 15px;top: 0;bottom: 0;left: 0;right: 0;margin: auto;}
+        .card-title {font-weight: 700; font-family: system-ui, -apple-system, 'Segoe UI','Open Sans', 'Helvetica Neue', sans-serif;text-align: center; padding: 10px;}
+        .card-description {color:grey; font-weight: 400; font-family: system-ui, -apple-system, 'Segoe UI','Open Sans', 'Helvetica Neue', sans-serif;text-align: center; padding: 10px;}
+        </style>
     </head>
     <body>
         <main>
